add canonical URL

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		<script src="https://kit.fontawesome.com/e5f441b479.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<Header />
