--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,14 +7,16 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
+const { canonical_url } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		{canonical_url && <link rel="canonical" href={canonical_url} />}
 		<style>
 			main {
 				width: 960px;
